# storage/api-docs/api-docs.json
@@ -424,6 +424,92 @@
                     }
                 ]
             }
+        },
+        "/api/client/proposal/status": {
+            "post": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Proposal Status Processing",
+                "operationId": "proposalStatusProcessing",
+                "requestBody": {
+                    "description": "Proposal Status Processing",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id"
+                                ],
+                                "properties": {
+                                    "id": {
+                                        "type": "integer",
+                                        "format": "integer",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "default": {
+                        "description": "Success"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/post/status": {
+            "post": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Post Status",
+                "operationId": "postStatus",
+                "requestBody": {
+                    "description": "Post Status",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id",
+                                    "status"
+                                ],
+                                "properties": {
+                                    "id": {
+                                        "type": "integer",
+                                        "format": "integer",
+                                        "example": "1"
+                                    },
+                                    "status": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "ended or completed"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "default": {
+                        "description": "Success"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
         }
     },
     "components": {
